# countries-data-searx-plugin

./: README.md  countries_data-graph.html  countries_data.py  install_plugin.sh  pyproject.toml  requirements.txt
src/countries_data/: __init__.py  countries-data.py
