# ==============================================================================
[build-system]
# ==============================================================================

requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
[project]
# ==============================================================================

name = "countries-data"
version = "0.0.1"
readme = "README.rst"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
description = "SearXNG plugin that shows a country's data such as GDP, GDP per Capita, population, etc"
authors = [
    { name = "Martinho", email = "eu@martinho.pt" },
    { name = "SearXNG Community", email = "markus.heiser@darmarit.de" },
]

dependencies = [
  "flask_babel",
  "countryinfo[fuzzy]"
]

[project.urls]
Code = "https://github.com/Marte77/countries-data-searx-plugin"
Homepage = "https://github.com/Marte77/countries-data-searx-plugin"
"Issue tracker" = "https://github.com/Marte77/countries-data-searx-pluginissues"

# ==============================================================================
[tool.hatch]
# ==============================================================================


[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build.targets.sdist]
# include = []

# hatch env: default
# ------------------

[tool.hatch.envs.countries_data_sxng]
python = "3.13"
dependencies = [
  "basedpyright==1.27.*",
  "black==25.1.*",
  "pylint==3.3.*",
  "isort==6.0.*",
]

# FIXME: ..
post-install-commands = [
  "python -m pip install --upgrade pip",
  "python -m pip install setuptools pyyaml",
  # "python -m pip install git+https://github.com/searxng/searxng.git@master",
]

[tool.hatch.envs.default.scripts]

fix = [
  "isort {args:./src}",
  "black {args:./src}",
]

check = [
  "isort --diff {args:./src}",
  "black --check --diff {args:./src}",
  "pylint --output-format=parseable {args:./src}",
  "basedpyright {args:./src}",
]

# ==============================================================================
[tool.isort]
# ==============================================================================

profile = "black"
atomic = true
use_parentheses = true
include_trailing_comma = true
